Improve logging and make transaction logging optional